Project "DoctoLeb Appointment Booking Detail ERD" {
  database_type: "PostgreSQL"
  Note: "Detailed ERD: the exact tables needed to publish slots, book a patient, create an appointment, start an encounter, charge, and notify."
}

Table identity.users {
  id uuid [pk]
  email varchar(255) [not null, unique]
  role varchar(50) [not null]
  first_name varchar(255)
  last_name varchar(255)
  phone varchar(20)
  avatar_url text
  initials varchar(5)
  is_active boolean
  created_at timestamptz
  updated_at timestamptz
  auth_user_id uuid

  Note: 'Application identity and role profile.'
}

Table identity.doctors {
  id uuid [pk]
  user_id uuid [not null, unique]
  department varchar(100)
  specialization varchar(100)
  license_number varchar(100) [unique]
  bio text
  availability json
  consultation_fee numeric(10,2)
  created_at timestamptz
  updated_at timestamptz
  provisioning_client_request_id uuid

  Note: 'Doctor/provider profile linked to a user.'
}

Table patient_record.patients {
  id uuid [pk]
  user_id uuid [not null, unique]
  date_of_birth date
  sex varchar(20)
  blood_type varchar(10)
  allergies text
  medical_history text
  emergency_contact varchar(255)
  emergency_phone varchar(20)
  insurance_id varchar(100)
  created_at timestamptz
  updated_at timestamptz
  is_archived boolean [not null]
  archived_at timestamptz
  archived_by uuid
  intake_completed_at timestamptz
  established_at timestamptz
  full_name text [not null]
  phone text [not null]
  email text

  Note: 'Clinical patient profile linked to a user.'
}

Table scheduling.clinics {
  id uuid [pk]
  name text [not null]
  address text [not null]
  created_at timestamptz
  location_type text [not null]
  city_id uuid
  phone text
  working_hours jsonb
  is_primary boolean [not null]
  notes text
  latitude numeric(10,7)
  longitude numeric(10,7)
  map_url text
  floor text
  room text
  is_archived boolean [not null]
  archived_at timestamptz
  archived_by uuid

  Note: 'Clinic location where visits happen.'
}

Table reference.visit_types {
  id uuid [pk]
  code text [not null, unique]
  name text [not null]
  default_duration_minutes integer [not null]
  default_fee numeric(10,2)
  requires_intake boolean [not null]
  billable_service_id uuid
  is_system boolean [not null]
  is_active boolean [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: 'Visit type, duration, and billing defaults.'
}

Table scheduling.doctor_schedule_templates {
  id uuid [pk]
  doctor_id uuid [not null]
  clinic_id uuid [not null]
  weekday smallint [not null]
  start_time time [not null]
  end_time time [not null]
  slot_duration_minutes integer [not null]
  is_active boolean [not null]
  effective_from date
  effective_to date
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: 'Recurring doctor availability pattern.'
}

Table scheduling.secretary_slots {
  id uuid [pk]
  doctor_id uuid
  clinic_id uuid
  date date [not null]
  start_time time [not null]
  end_time time [not null]
  is_active boolean [not null]
  created_by uuid [not null]
  recurrence_group_id uuid
  created_at timestamptz
  schedule_template_id uuid

  Note: 'Bookable slot created from schedule or staff.'
}

Table scheduling.appointments {
  id uuid [pk]
  doctor_id uuid [not null]
  patient_id uuid [not null]
  scheduled_at timestamptz [not null]
  duration_minutes integer
  status text [not null]
  reason text
  notes text
  created_at timestamptz
  updated_at timestamptz
  slot_id uuid [not null]
  booked_by uuid [not null]
  clinic_id uuid
  visit_type_id uuid

  Note: 'Booked visit between patient and doctor.'
}

Table clinical.encounters {
  id uuid [pk]
  appointment_id uuid [not null, unique]
  patient_id uuid [not null]
  doctor_id uuid [not null]
  clinic_id uuid
  visit_type_id uuid
  status text [not null]
  started_at timestamptz
  ended_at timestamptz
  chief_complaint text
  summary text
  created_by uuid
  is_archived boolean [not null]
  archived_at timestamptz
  archived_by uuid
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: 'Clinical visit record opened from an appointment.'
}

Table billing.payments {
  id uuid [pk]
  patient_id uuid [not null]
  doctor_id uuid [not null]
  appointment_id uuid
  amount numeric(10,2) [not null]
  currency varchar(10)
  status varchar(50)
  payment_method varchar(50)
  transaction_id varchar(255) [unique]
  created_at timestamptz
  updated_at timestamptz

  Note: 'Payment record linked to patient, doctor, or visit.'
}

Table clinical.care_tasks {
  id uuid [pk]
  patient_id uuid
  encounter_id uuid
  appointment_id uuid
  assigned_to uuid
  created_by uuid [not null]
  task_type text [not null]
  title text [not null]
  description text
  due_at timestamptz
  priority text [not null]
  status text [not null]
  completed_at timestamptz
  is_archived boolean [not null]
  archived_at timestamptz
  archived_by uuid
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  client_request_id uuid

  Note: 'Follow-up task for clinical or operational work.'
}

Table messaging.notification_events {
  id uuid [pk]
  user_id uuid
  patient_id uuid
  title text [not null]
  body text [not null]
  event_type text [not null]
  related_type text
  related_id uuid
  severity text [not null]
  status text [not null]
  scheduled_for timestamptz
  created_by uuid
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  client_request_id uuid
  source text [not null]

  Note: 'Notification request before delivery.'
}

Table messaging.notification_deliveries {
  id uuid [pk]
  event_id uuid [not null]
  user_id uuid
  device_id uuid
  channel text [not null]
  status text [not null]
  provider_message_id text
  error_message text
  sent_at timestamptz
  read_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  client_request_id uuid

  Note: 'Delivery attempt for a notification event.'
}

Table patient_record.patient_devices {
  id uuid [pk]
  patient_id uuid [not null]
  user_id uuid [not null]
  platform text [not null]
  push_token text [not null, unique]
  device_label text
  app_version text
  locale text
  timezone text
  is_active boolean [not null]
  last_seen_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  Note: 'Patient device used for push delivery.'
}

TableGroup "identity" [color: #2563EB] {
  identity.users
  identity.doctors

  Note: 'Login users, doctors, staff, and roles.'
}
TableGroup "patient_record" [color: #0D9488] {
  patient_record.patients
  patient_record.patient_devices

  Note: 'Patient profile, consent, and history.'
}
TableGroup "reference" [color: #64748B] {
  reference.visit_types

  Note: 'Lookup data that standardizes forms.'
}
TableGroup "scheduling" [color: #D97706] {
  scheduling.clinics
  scheduling.doctor_schedule_templates
  scheduling.secretary_slots
  scheduling.appointments

  Note: 'Clinics, availability, slots, and bookings.'
}
TableGroup "clinical" [color: #E11D48] {
  clinical.encounters
  clinical.care_tasks

  Note: 'Encounters, notes, documents, and care tasks.'
}
TableGroup "billing" [color: #059669] {
  billing.payments

  Note: 'Payments, insurance, contracts, and claims.'
}
TableGroup "messaging" [color: #DB2777] {
  messaging.notification_events
  messaging.notification_deliveries

  Note: 'Chat, notifications, receipts, and delivery.'
}

Note relationship_story {
  'Relation: doctor + patient + slot create appointment, then encounter, payment, task, and notification.'
}

Note relationship_legend {
  'Ref format: left foreign key > right owner. Line color follows the left table area.'
}

Ref: identity.doctors.user_id > identity.users.id [color: #2563EB]
Ref: patient_record.patients.user_id > identity.users.id [color: #0D9488]
Ref: scheduling.doctor_schedule_templates.doctor_id > identity.doctors.id [color: #D97706]
Ref: scheduling.doctor_schedule_templates.clinic_id > scheduling.clinics.id [color: #D97706]
Ref: scheduling.secretary_slots.doctor_id > identity.doctors.id [color: #D97706]
Ref: scheduling.secretary_slots.clinic_id > scheduling.clinics.id [color: #D97706]
Ref: scheduling.secretary_slots.created_by > identity.users.id [color: #D97706]
Ref: scheduling.secretary_slots.schedule_template_id > scheduling.doctor_schedule_templates.id [color: #D97706]
Ref: scheduling.appointments.doctor_id > identity.doctors.id [color: #D97706]
Ref: scheduling.appointments.patient_id > patient_record.patients.id [color: #D97706]
Ref: scheduling.appointments.booked_by > identity.users.id [color: #D97706]
Ref: scheduling.appointments.clinic_id > scheduling.clinics.id [color: #D97706]
Ref: scheduling.appointments.visit_type_id > reference.visit_types.id [color: #D97706]
Ref: scheduling.appointments.slot_id > scheduling.secretary_slots.id [color: #D97706]
Ref: clinical.encounters.appointment_id > scheduling.appointments.id [color: #E11D48]
Ref: clinical.encounters.patient_id > patient_record.patients.id [color: #E11D48]
Ref: clinical.encounters.doctor_id > identity.doctors.id [color: #E11D48]
Ref: clinical.encounters.clinic_id > scheduling.clinics.id [color: #E11D48]
Ref: clinical.encounters.visit_type_id > reference.visit_types.id [color: #E11D48]
Ref: clinical.encounters.created_by > identity.users.id [color: #E11D48]
Ref: billing.payments.appointment_id > scheduling.appointments.id [color: #059669]
Ref: billing.payments.doctor_id > identity.doctors.id [color: #059669]
Ref: billing.payments.patient_id > patient_record.patients.id [color: #059669]
Ref: clinical.care_tasks.appointment_id > scheduling.appointments.id [color: #E11D48]
Ref: clinical.care_tasks.encounter_id > clinical.encounters.id [color: #E11D48]
Ref: clinical.care_tasks.patient_id > patient_record.patients.id [color: #E11D48]
Ref: clinical.care_tasks.assigned_to > identity.users.id [color: #E11D48]
Ref: clinical.care_tasks.created_by > identity.users.id [color: #E11D48]
Ref: patient_record.patient_devices.patient_id > patient_record.patients.id [color: #0D9488]
Ref: patient_record.patient_devices.user_id > identity.users.id [color: #0D9488]
Ref: messaging.notification_events.user_id > identity.users.id [color: #DB2777]
Ref: messaging.notification_events.patient_id > patient_record.patients.id [color: #DB2777]
Ref: messaging.notification_events.created_by > identity.users.id [color: #DB2777]
Ref: messaging.notification_deliveries.event_id > messaging.notification_events.id [color: #DB2777]
Ref: messaging.notification_deliveries.user_id > identity.users.id [color: #DB2777]
Ref: messaging.notification_deliveries.device_id > patient_record.patient_devices.id [color: #DB2777]
